# kaggle-titanic

./: .gitignore  README.md  pyproject.toml  titanic.ipynb
notebooks/: Initial Analysis and DecisionTreeClassifier.ipynb
